force-app/main/default/objects/TXN_Field_Change__c/TXN_Field_Change__c.object-meta.xml
<CustomObject>
    <label>TXN Field Change</label>
    <nameField>
        <displayFormat>TXNFC-{000000}</displayFormat>
        <label>TXN Field Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TXN Field Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>