force-app/main/default/objects/TXN_Field_Change__c/fields/TXN_Step__c.field-meta.xml
<CustomField>
    <fullName>TXN_Step__c</fullName>
    <label>TXN Step</label>
    <referenceTo>TXN_Step__c</referenceTo>
    <relationshipLabel>TXN Field Changes</relationshipLabel>
    <relationshipName>TXN_Field_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>